- Downgrade jdk version to 17; - Add spec for ReverseTransformation - Add tests for gradle version compatibility